build(engine): target java 17 for shared version support